# qna-text2sql

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: query_api.py
app/ingestion/: ingest_pdfs.py
app/models/: llm.py
app/utils/: rag_helpers.py
chroma/: chroma.sqlite3
config/: Dockerfile  docker-compose.yml
db/: chroma.sqlite3
