[tool.poetry]
name = "qna-text2sql"
version = "0.1.0"
description = ""
authors = ["amit0101 <amit.kr.py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
python-dotenv = "^1.0.1"
openai = "^1.52.1"
streamlit = "^1.39.0"
chromadb = "^0.5.15"
pymupdf = "^1.24.12"
langchain-openai = "^0.2.3"
langchain-chroma = "^0.1.4"
protobuf = "3.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
